moving interface:port to config file, default allow remote for docker

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -8,5 +8,7 @@ akka {
     client.idle-timeout = 600 s
     host-connection-pool.idle-timeout = 600 s
     host-connection-pool.client.idle-timeout = 600 s
+    server.interface = "0.0.0.0"
+    server.port = "9001"
   }
 }
