--- a/swarm-docker-compose.yml
+++ b/swarm-docker-compose.yml
@@ -2,7 +2,7 @@ version: "3"
 
 services:
     akkadisaster:
-        image: akkaasync
+        image: cliftbar/akkadisaster
         ports:
             - 9001:9001
         deploy:
